# mrisc32

./: .gitmodules  LICENSE  README.md  contribute.html  index.html  resources.html  site.css
.github/workflows/: build-isa-manual.yml
arch-db/: instruction_db.py  mrisc32-instructions.yaml  mrisc32-system-registers.yaml  system_register_db.py
asm/: README.md  asm.py  elf2bin.py  mr32asm.py
doc/: AddressingModes.md  AssemblerSyntax.md  CPUID.md  CommonConstructs.md  InstructionEncoding.md  Instructions.md  PackedOperations.md  Registers.md  SHUF.md  SIMDDesign.md  Tools.md  VectorDesign.md
hw/mrisc32-a1/: .gitignore  Makefile  README.md  make_png.sh  run_program.sh
instructiondb/: README.md  dbtool.py  instruction_db.py  mrisc32-instructions.yaml  system_register_db.py  tex_helpers.py
isa-manual/: abi.tex  base-architecture.tex  conventions.tex  examples.tex  floating-point-module.tex  get_version.sh  instruction-list.tex  instructions.tex  introduction.tex  manual.tex  mrisc32-instruction-set-manual.bib  mrisc32-instruction-set-manual.tex  opcode-list.tex  packed-operation-module.tex  preamble.tex  preface.tex  programming-model.tex  registers.tex  saturating-and-halving-arithmetic-module.tex  system-register-list.tex  system-registers.tex  title.tex  vector-operation-module.tex
markdown/: AddressingModes.md  PackedOperations.md  VectorDesign.md
media/: README.md
mrisc32-a1/: Makefile  README.md  runtest.sh
mrisc32-a1/alu/: Makefile  add32.vhd  alu.vhd  alu_tb.vhd  clz32.vhd  (+7 more)
sim/: .clang-format  .gitignore  CMakeLists.txt  README.md  cache.hpp  config.hpp  cpu.cpp  cpu.hpp  cpu_simple.cpp  cpu_simple.hpp  gpu.cpp  gpu.hpp  mr32sim.cpp  ram.cpp  ram.hpp  sim.cpp
sim/glad/: CMakeLists.txt
sim/glad/include/glad/: glad.h
sw/: .gitignore  build.ninja  link.ld
test/: Makefile  graphics.s  mandelbrot.s  super_test.s  sys.s  test1.s  test2.s
tools/: README.md  elf2bin.py  mrisc32-trace-tool.py
vhdl/: .gitignore  Makefile  README.md  adder.vhd  alu.vhd  alu_tb.vhd  clz32.vhd  clz32_tb.vhd  comparator_tb.vhd  consts.vhd  icache.vhd  icache_tb.vhd  make_png.sh  pipeline_ex.vhd  pipeline_id.vhd  pipeline_if.vhd  pipeline_mem.vhd  pipeline_wb.vhd  reg.vhd  reg32x32.vhd  reg32x32_tb.vhd  regs_scalar.vhd  regs_scalar_tb.vhd  runtest.sh  shift32.vhd  shift32_tb.vhd
(+299 files in other folders)
